# Deeper

./: .gitignore  Dockerfile  README.md  SetupEnvironemnt.sh  checkpoint  docker-compose.yml  model_w.data-00000-of-00002  model_w.index  pyproject.toml  requirements.txt  setup.py  temp.env
.github/workflows/: docker-image.yml
deeper/: tf2._notes.md
deeper/analysis/: example_function.py  testing_class_variable_assignments.py
deeper/analysis/adversarial_autoencoder/: callbacks.py  test_mnist_gumblegmvae.py  test_mnist_stackedgmvae.py  test_mnist_vae.py  test_mnist_vae_hypermodel.py
deeper/analysis/gan/: callbacks.py  test_mnist_gumblegmvae.py  test_mnist_stackedgmvae.py  test_mnist_vae.py  test_mnist_vae_gan_hyper_tuning.py
deeper/analysis/general/: testing_tensorflow_batch_training.py
deeper/analysis/generalised_autoencoder/: callbacks.py
deeper/analysis/vae/: test_hyper_tuning.py  test_mnist.py  test_model_mnist.py  test_model_mnist_cli.py  test_synthetic.py
deeper/etl/: dataset.py  getter.py  loader.py
deeper/gmvae/gmvae_pure_sampling/: model.py  train.py  utils.py
deeper/layers/: binary.py  categorical.py  data_splitter.py  encoder.py  lstm_encocoder.py  random_normal.py  transformer.py  variable_selection.py
deeper/models/adversarial_autoencoder/: base_getter.py  model.py  network.py  network_loss.py  utils.py
deeper/models/autoencoder/: __init__.py  latent.py  model.py  network.py  network_loss.py  parser.py  utils.py
deeper/models/gan/: base_getter.py  descriminator.py  model.py  network.py  network_loss.py  utils.py
deeper/models/generalised_autoencoder/: base.py  input_mask_ae.py  network.py  tunable.py  types.py
deeper/models/gmvae/: __init__.py  base.py  marginalautoencoder.py  marginalvae.py  marginalvae_loss.py  metrics.py  model.py  utils.py
deeper/models/identity/: __init__.py  model.py  network.py  utils.py
deeper/models/null/: __init__.py  model.py  network.py  (+1 more)
deeper/ops/: dims.py  distance.py  reduce.py
deeper/probability_layers/: dirichlet.py  gumble_softmax.py  normal.py
deeper/utils/: cooling.py  dict.py  metrics.py  model_mixins.py  pbar_callback.py  sampling.py  scope.py  serialize.py  tensorboard.py  type_getter.py  types.py
(+91 files in other folders)
