[tool.poetry]
name = "deeper"
version = "0.1.3"
description = "A collection of deep learning models"
authors = ["DDiaz"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
tensorflow = "^2.11.0"
numpy = "*"
scikit-learn = "^1.2.0"
tqdm = "^4.64.1"
pydantic = "^1.10.4"
tensorflow-addons = "^0.19.0"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
kfp = "^1.8.20"
keras-tuner = "^1.3.5"
pydantic-argparse = "^0.8.0"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
black = "^20.8b1"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
pylint = "^2.6.0"
autopep8 = "^1.5.4"
pytest = "^6.1.2"
llvmlite = "^0.39.0"
numba = "^0.56.4"
mlflow = "^2.1.1"
azureml-core = "^1.48.0"
azureml-mlflow = "^1.48.0"

sphynx = "^0.0.3"
sphinx-book-theme = "^0.3.3"

[tool.black]
line-length = 100
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

